fixed  menu item image problems but it still stuck.

--- a/src/app/components/utilities/scrape-common-items/scrape-common-items.component.css
+++ b/src/app/components/utilities/scrape-common-items/scrape-common-items.component.css
@@ -7,3 +7,15 @@
   min-width: 200px;
   max-width: 200px;
 }
+
+.scraping-result {
+  overflow-y: scroll;
+  max-height: 300px;
+  border: 1px solid #ece3e3;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 0 10px;
+}
+
+.limit-scraping-div-width {
+  min-width: 300px;
+  max-width: 300px;
+}
